Fix padding on entity and option nodes to make it more readable.

--- a/src/components/modals/ActionPayloadEditor/OptionalNode.css
+++ b/src/components/modals/ActionPayloadEditor/OptionalNode.css
@@ -2,5 +2,5 @@
     border: 1px solid rgb(230, 171, 94);
     background: rgb(255, 210, 184);
     border-radius: 4px;
-    padding: 0.35rem 0;
+    padding: 0.25rem 0;
 }
